--- a/src/ForestTools/README
+++ b/src/ForestTools/README
@@ -6,6 +6,10 @@ https://cran.r-project.org/bin/windows/base/
 ForestTools:
 https://cran.r-project.org/web/packages/ForestTools/vignettes/treetop_analysis.html
 
+Required pre-installed R packages:
+
+readbitmap, png, jpeg, imager
+
 Change LAS import path to your local Directory
 -> How to import path relative to repository?
 -> Create Directory for all input data
