--- a/src/python_testing/gta.ipynb
+++ b/src/python_testing/gta.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyfor\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Set the parameters\u001b[39;00m\n\u001b[1;32m      4\u001b[0m las_file_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpath/to/your/file.las\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyfor\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Set the parameters\u001b[39;00m\n\u001b[1;32m      4\u001b[0m resolution \u001b[39m=\u001b[39m \u001b[39m1.0\u001b[39m  \u001b[39m# Desired resolution of the CHM (in the same units as the point cloud)\u001b[39;00m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyfor'"
      ]
     }
