--- a/golm_tree_analysis.ipynb
+++ b/golm_tree_analysis.ipynb
@@ -604,6 +604,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "st_geometry converts the chm to an sfc, a classed list-column with simple feature geometries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {},
@@ -847,7 +854,11 @@
     "\n",
     "uses the same window size function as above!\n",
     "\n",
-    "for foresttools crown support the vwf algorithm has to be used"
+    "for foresttools crown support the vwf algorithm has to be used\n",
+    "\n",
+    "vwf (variable window filter) calculates the tree tops using the method in \"Popescu, S. C., & Wynne, R. H. (2004). Seeing the trees in the forest. Photogrammetric Engineering & Remote Sensing, 70(5), 589-604. \"\n",
+    "\n",
+    "mcws (Marker-Controlled Watershed Segmentation) is the implementation of the Watershed algorithm from \"F. Meyer, S. Beucher, 1990. Morphological Segmentation. Centre de Morphologie Mathématique, Paris School of Mines\""
    ]
   },
   {
